# mintpl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mintpl.pc.in
cmake/: CMocka.cmake
examples/: factorial.mtpl  names.mtpl
include/mintpl/: buffers.h  common.h  descriptor.h  generators.h  hashtable.h  mintpl.h  property.h  substitute.h  version.h
src/: buffers.c  descriptor.c  generator_arithmetics.c  generators.c  hashtable.c  hashtable.h  mintpl.c  stack.h  substitute.c  version.c
standalone/: CMakeLists.txt
standalone/src/: locale.c  locale.h  mintpl.c
tests/: CMakeLists.txt
tests/src/: test_descriptor.c  test_generator_arithmetics.c  test_generators.c  test_hashtable.c  test_substitute.c  test_unicode.c  testdrive.h
